# efrion-ai

./: .env.example  .geminiignore  .gitignore  README.md  RELEASE.md  ROADMAP.md  TASKS.md  docker-compose.yml  efrion_erp.html  extension.crx  extension.pem  test_erp.html
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  access_tokens.py  api.py  database.py  email_templates.py  main.py  pyproject.toml  requirements.txt  session.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js  recorder-worklet.js
plan/: upgrade-model.md
website/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  proxy.ts
website/app/: globals.css  layout.tsx  manifest.json  not-found.tsx  page.tsx
website/app/api/admin/approve/: route.ts
website/app/api/auth/login/: route.ts
website/app/api/auth/logout/: route.ts
website/app/api/request-access/: route.ts
website/app/demo/: page.tsx
website/app/login/: page.tsx
website/app/request-access/: page.tsx
website/components/: Architecture.tsx  Contact.tsx  DemoScenarios.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Navbar.tsx  ProductPreview.tsx  TechStack.tsx
website/emails/: AccessGrantedEmail.tsx  AccessRequestConfirmEmail.tsx  AdminNotificationEmail.tsx  EmailLayout.tsx
website/lib/: access-tokens.ts  analytics.ts  session.ts
website/public/downloads/: efrion-ai-extension.crx
