[project]
name = "erp-ai-autopilot-backend"
version = "0.1.0"
description = "FastAPI backend for ERP AI Autopilot using Gemini Multimodal Live API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
